--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
+    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
